# molm

./: .gitignore  LICENSE  README.md  codebase_to_json.py  pyproject.toml  requirements.txt  setup.py
docs/: concept_processing.md
examples/: basic_modification.py  concept_demonstration.py  concept_space_demo.py
scripts/: harvest_concepts.py  verify_embeddings.py
src/: generate.py  train.py
src/data/: dataset.py  lm_ordered_dataset.py
src/model/: config.py  model.py
src/molm/: __init__.py
src/molm/concepts/: concept_space.py  harvester.py  static_concept_space.py
src/molm/embeddings/: nomic_embedder.py
src/molm/modification/: token_modifier.py
tests/: test_token_modifier.py
