[project]
name = "molm"
version = "0.1.0"
description = "Testing Concept-Aware Token Modification in Transformer Architectures"
authors = [
    {name = "Hayden Smith", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "networkx>=3.1",
    "requests>=2.31.0",
    "nltk>=3.8.1",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "tabulate>=0.9.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 